--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 /* Active Navigation Link */
 .Navs a.active {
-  color: rgba(214, 73, 73, 0.884);
+  color:rgb(32, 204, 204);
 } 
 
 .Aside a.active {
@@ -47,4 +47,9 @@ input::-webkit-inner-spin-button{
 
 input[type=number]{
   -moz-appearance: textfield;
+}
+
+@font-face {
+  font-family: poppins;
+  src: url("./assets//fonts/Poppins-Light.ttf");
 }
